# profile-generator

./: .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  cookiecutter.json  pyproject.toml
.github/scenarios/: 0.toml_linting-0.workflow_linting.json  0.toml_linting-1.workflow_linting.json  1.toml_linting-0.workflow_linting.json  1.toml_linting-1.workflow_linting.json
.github/scripts/: apply.sh  checklist.sh  job-50-test-precommit.sh  job-95-mac-maker.sh  requirements.sh  setup.sh  step-setup-environment.sh  task-render-template.sh  template.sh  test_precommit.sh  workflow-setup-environment.sh
.github/workflows/: .job-00-start.yml  .job-00-success.yml  .job-10-security.yml  .job-30-documentation.yml  .job-40-ansible-lint.yml  .job-50-precommit.yml  .job-60-remote-push.yml  .job-80-commit-lint.yml  .job-80-shell-lint.yml  .job-80-toml-lint.yml  .job-80-workflow-lint.yml  .job-80-yaml-lint.yml  .job-95-mac-maker.yml  .job-99-create-release.yml  self-test.yml  workflow-template-test.yml
.vale/Vocab/profile-generator/: accept.txt
hooks/: post_gen_project.sh
scripts/: test.sh  update.sh
{{cookiecutter.profile_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mac_maker.yml  pyproject.toml
{{cookiecutter.profile_slug}}/.github/config/: markdown.link.check.json
{{cookiecutter.profile_slug}}/.github/config/workflows/: push.json
{{cookiecutter.profile_slug}}/.github/scripts/: ansible_cache.sh  changelog.sh  poetry.sh  pushed_commit_range.sh  release-candidate.sh  setup.sh  version.sh  workflow-determine-pushed-commits.sh  workflow-setup-environment.sh
{{cookiecutter.profile_slug}}/.github/workflows/: .job-00-start.yml  .job-00-success.yml  .job-10-security.yml  .job-30-documentation.yml  .job-40-ansible-lint.yml  .job-80-commit-lint.yml  .job-80-toml-lint.yml  .job-80-workflow-lint.yml  .job-80-yaml-lint.yml  .job-99-create-release.yml  push.yml  workflow-push.yml
{{cookiecutter.profile_slug}}/profile/: install.yml  requirements.yml
{{cookiecutter.profile_slug}}/profile/__precheck__/: notes.txt
{{cookiecutter.profile_slug}}/profile/handlers/: main.yml
{{cookiecutter.profile_slug}}/profile/tasks/post_install/: main.yml
{{cookiecutter.profile_slug}}/profile/vars/: main.yml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/deactivated/: .job-00-start.yml  job-99-version.sh  workflow-setup-environment.sh
{{cookiecutter.project_slug}}/.github/scripts/: job-50-test-precommit.sh  task-setup-ansible-cache.sh
{{cookiecutter.project_slug}}/.github/workflows/: .job-00-success.yml  .job-10-security.yml  .job-40-ansible-lint.yml  .job-80-commit-lint.yml  .job-80-toml-lint.yml  .job-80-yaml-lint.yml  .job-99-create-release.yml  workflow-push.yml
{{cookiecutter.project_slug}}/.pre-commit/: ansible-lint.sh
{{cookiecutter.project_slug}}/profile/: install.yml
{{cookiecutter.project_slug}}/profile/__precheck__/: notes.txt
(+2 files in other folders)
