
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]

[tool]

  [tool.commitizen]
    bump_message = "bump(RELEASE): $current_version → $new_version"
    version = "0.3.1"
    version_files = ["pyproject.toml:version"]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Cookiecutter powered Mac Maker OSX machine profile generator."
    license = "MIT"
    name = "profile-generator"
    readme = "README.md"
    version = "0.3.1"

    [tool.poetry.dependencies]
      commitizen = "^2.42.1"
      pre-commit = "^3.1.0"
      python = ">=3.9.0,<4.0"
      yamllint = "^1.29.0"
