
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.poetry]
    authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
    description = "{{cookiecutter.description}}"
    name = "{{cookiecutter.profile_slug}}"
    version = "0.0.1"

    [tool.poetry.dependencies]
      python = ">=3.8.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^6.2.0"
      ansible-compat = "!=2.1.0"
      ansible-lint = "^5.3.2"
      commitizen = "^2.20.4"
      molecule = "^4.0.4"
      yamllint = "^1.26.3"
