
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.commitizen]
    bump_message = "bump(RELEASE): $current_version → $new_version"
    version = "0.1.0"
    version_files = ["pyproject.toml:version"]

  [tool.poetry]
    authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
    description = "{{cookiecutter.description}}"
    name = "{{cookiecutter.profile_slug}}"
    version = "0.1.0"

    [tool.poetry.dependencies]
      python = ">={{cookiecutter._MAC_MAKER_PYTHON_VERSION}}.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^{{ cookiecutter._MAC_MAKER_ANSIBLE_VERSION }}.0"
      commitizen = "^2.42.0"
      pre-commit = "^3.1.0"
      yamllint = "^1.29.0"

      [tool.poetry.dev-dependencies.ansible-lint]
        markers = "platform_system != 'Windows'"
        version = "^6.12.2"
